# nofx-us-py

./: .gitignore  MIGRATION_PLAN.md  Makefile
nofx-us-stock/: .gitignore  Makefile  README.md  config.json.example  pyproject.toml
nofx-us-stock/src/: main.py
nofx-us-stock/src/api/: server.py
nofx-us-stock/src/config/: loader.py
nofx-us-stock/src/decision/: engine.py
nofx-us-stock/src/logger/: decision_logger.py
nofx-us-stock/src/manager/: trader_manager.py
nofx-us-stock/src/market/: dummy_data_api.py  option_data.py  stock_data.py
nofx-us-stock/src/mcp/: ai_client.py
nofx-us-stock/src/pool/: stock_pool.py
nofx-us-stock/src/trader/: auto_trader.py  dummy_broker_api.py  option_trader.py  stock_trader.py  trader_interface.py
nofx-us-stock/tests/: test_dummy_api.py
web/: index.html  vite.config.ts
web/src/: App.tsx  types.ts
web/src/i18n/: translations.ts
web/src/types/: index.ts
