[tool.poetry]
name = "nofx-us-stock"
version = "0.1.0"
description = "AI-driven US stock and option auto trading system"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
openai = "^1.0.0"
aiohttp = "^3.9.0"
pandas = "^2.0.0"
numpy = "^1.24.0"
loguru = "^0.7.0"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
ta-lib = "^0.6.8"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.0.0"
isort = "^5.12.0"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true


